# rtdsm

./: MANIFEST.in  README.md  setup.cfg
examples/: combining_dsms.py  convert_dsm.py  extract_clusterfeatures.py  extract_ellipsefeatures.py  load_dose_from_dicom.py  load_structure_from_dicom.py  make_clustermask.py  make_dsh.py  make_nonplanar_dsm.py  make_planar_dsm.py  make_surface_mesh.py  nonplanar_slicing.py  planar_slicing.py  run_mcp_test.py  sampling_dose.py  set_sampling_points.py
rtdsm/: __init__.py  dicomreading.py  dsmprocessing.py  examples.py  helpers.py  meshandspline.py  rtdsm.py
rtdsm/sampledata/: CT.example.dcm  RP.example.dcm  RS.example.dcm
