[metadata]
name = rtdsm
version = 0.1.1
author = H Patrick
author_email = haley.patrick@mail.mcgill.ca
description = A package to create dose-surface maps from radiation therapy treatment data files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haleypats/rtdsm
project_urls =
    Bug Tracker = https://github.com/haleypats/rtdsm/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = true
packages = find:
python_requires = >=3.6

install_requires = 
	numpy >= 1.19.5
	pyvista >= 0.31.3
	pydicom >= 2.1.2
	scipy >= 1.5.4
	scikit-image >= 0.17.2
	opencv-python  >= 4.2.0.34
